--- a/knitting-blog.html
+++ b/knitting-blog.html
@@ -1,13 +1,43 @@
-<DOCTYPE html>
+<DOCTYPEhtml>
 <html>
   <head>
-    <title>Knitting with Allie
-  </head>
+    <title>My knitting blog!</title>
   <body>
-    <h1>These are some basics of my experiences with knitting.</h1>
+    <h1>My knitting blog!</h1>
 
-    <h2>Yarn</h2>
-    <p>You need to start with some great yarn.  A lot of people start by knitting a dishcloth as their first project.  This requires inexpensive cotton yarn.
-    These are some other types of yarn you can use for various projects.</p>
-  </body>
+    <h2>These are the very basics of my experience in knitting.</h2>
+
+    <h3>Yarn</h3>
+    <p>First you need yarn.  A lot of people start with a washcloth as their first project.  For a washcloth you need an inexpensive cotton yarn.  As your projects get more varied, you'll want different types of yarn.</p>
+    <p>Here are a few yarns to start with.</p>
+    <ol>
+      <li>Wool yarn</li>
+        <ul>
+          <li>Fine wool</li>
+          <li>Medium wool</li>
+          <li>Long wool</li>
+          <li>Double wool</li>
+        </ul>
+      <li>Cashmere yarn</li>
+      <li>Alpaca yarn</li>
+      <li>Multi fiber yarn</li>
+    </ol>
+    <h4>Stitches</h4>
+    <p>There are so many types of stitches that make so many beautiful patterns.</p>
+    <p>Here are a few stitches you might use as a beginner.</p>
+    <ol>
+      <li>Knit stitch</li>
+      <li>Purl stich</li>
+      <li>Stockinette stitch</li>
+      <li>Seed stitch</li>
+      <li>Garter stitch</li>
+    </ol>
+
+
+
+
+
+
+
+
 <html>
