--- a/knitting-blog.html
+++ b/knitting-blog.html
@@ -32,12 +32,14 @@
       <li>Seed stitch</li>
       <li>Garter stitch</li>
     </ol>
-
-
-
-
-
-
+    <h5>Projects to start with</h5>
+    <p>As I mentioned before, a lot of people start with a washcloth as their first project.  What should be your next project?</p>
+    <p>These are a few project types that are great for beginners.</p>
+    <ol>
+      <li>Scarf</li>
+      <li>Wristband</li>
+      <li>Headband</li>
+    </ol>
 
 
 <html>
