--- a/knitting-blog.html
+++ b/knitting-blog.html
@@ -41,5 +41,11 @@
       <li>Headband</li>
     </ol>
 
+    <h6>Final thoughts</h6>
+    <p>I hope you enjoy going to your local yarn shop and picking out some yarn for your first project.  Feel it and smell it to get an idea of what it would be like to knit with it.  Even the simplist projects look wonderful when knit with beautiful yarn.  If it takes a while to feel like you know what you're doing, just remember that everyone goes through that!</p>
+
+    
+
+
 
 <html>
