--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,6 +1,6 @@
-<DOCTYPE html>
+cd git <DOCTYPE html>
 <html>
-  </head>
+  <head>
     <title>Michael's favorite things</title>
   </head>
   <body>
@@ -10,15 +10,39 @@
     <h3>People</h3>
     <p>Here are some of my favorite people!</p>
     <ul>
-      <li>My brother Christopher</li>
-      <li>My mom and dad:
+      <li>
+        <a href="http://www.example.com/christopher.html">
+        My brother <strong>Christopher</strong></li>
+        <img src="img/christopher.jpeg" alt-"A photo of Christopher">
+        </a>
+      </li>
+      <li>
+      My mom and dad:
         <ul>
-          <li>Steve</li>
-          <li>Carol</li>
+          <li>
+            <a href-"http://www.example.com/steve.html>"
+              <strong>Steve</strong>
+              <img src="img/steve.jpeg" alt="A photo of Steve."
+            </a>
+          </li>
+          <li>
+            <a href-"http://www.example.com/carol.html">
+              <strong>Carol</strong>
+              <img src="img/carol.jpeg" alt="A photo of Carol."
+            </a>
+          </li>
         </ul>
       </li>
-      <li>My friend Jessica</li>
-      <li>My friend Candy</li>
+      <li>
+        <a href="http://www.example.com/jessica.html">
+          My friend <strong>Jessica</strong>
+        </a>
+      </li>
+      <li>
+        <a href="http://www.example.com/candy.html">
+          My friend <strong>Candy</strong>
+        </a>
+      </li>
     </ul>
 
     <h3>Flavors of ice cream</h3>
