--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,4 +1,4 @@
-cd git <DOCTYPE html>
+<DOCTYPE html>
 <html>
   <head>
     <title>Michael's favorite things</title>
@@ -8,11 +8,11 @@ cd git <DOCTYPE html>
     <h2>These are a few of my favorite things.</h2>
 
     <h3>People</h3>
-    <p>Here are some of my favorite people!</p>
+    <p>Here are some of my <em>favorite people</em>!</p>
     <ul>
       <li>
         <a href="http://www.example.com/christopher.html">
-        My brother <strong>Christopher</strong></li>
+        My brother <strong>Christopher</strong>
         <img src="img/christopher.jpeg" alt-"A photo of Christopher">
         </a>
       </li>
@@ -44,7 +44,6 @@ cd git <DOCTYPE html>
         </a>
       </li>
     </ul>
-
     <h3>Flavors of ice cream</h3>
     <p>These are my three favorites, in order:</p>
     <ol>
@@ -52,6 +51,13 @@ cd git <DOCTYPE html>
       <li>Malted milk chocolate</li>
       <li>Black licorice (really!)</li>
     </ol>
+
+    <h3>Things in Portland</h3>
+    <p>Here are some of my favorite <em>things around Portland</em>!</p>
+    <ul>
+      <li>A sundial in <strong>Washington Park</strong>
+      <img src="sundial.jpg" alt="A photo of a sundial.">
+    </a>
 
     <p>Thanks for reading about me!</p>
   </body>
