--- a/favorite-places.html
+++ b/favorite-places.html
@@ -2,21 +2,20 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title>Michael's favorite things</title>
+    <title>Allie's favorite places</title>
   </head>
   <body>
-    <h1>My favorite things</h1>
-    <h2>These are a few of my favorite things.</h2>
+    <h1>My favorite places</h1>
+    <h2>These are a few of my favorite places.</h2>
 
-    <h3>People</h3>
-    <p>Here are some of my <em>favorite people</em>!</p>
+    <h3>Places</h3>
+    <p>Here are some of my <em>favorite places</em>!</p>
     <ul>
       <li>
-        <a href="http://www.example.com/christopher.html">
-        My brother <strong>Christopher</strong>
-        <img src="img/christopher.jpeg" alt-"A photo of Christopher">
+        <a href="http://www.example.com/beach.html"> <p>Beach</p>
         </a>
       </li>
+      <img src="https://picsum.photos/400/400" alt="A photo of the beach">
       <li>
       My mom and dad:
         <ul>
