--- a/knitting-blog.html
+++ b/knitting-blog.html
@@ -1,6 +1,7 @@
 <DOCTYPEhtml>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>My knitting blog!</title>
   <body>
     <h1>My knitting blog!</h1>
