Change h3 to violet.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <p>Here are some of my <em>favorite people</em>!</p>
     <ul>
       <li>
-        <a href="http://www.example.com/christopher.html">
-        My brother <strong>Christopher</strong>
-        <img src="img/christopher.jpeg" alt-"A photo of Christopher">
-        </a>
-      </li>
+        My brother <a href="https://en.wikipedia.org/wiki/Christopher"><strong>Christopher<strong></a>
+        </li>
+        <img src="https://picsum.photos/200/300" alt-"A photo of Christopher">
+
+
       <li>
       My mom and dad:
         <ul>
